Cross-version compatibility: Java 8, reflection for getTPS/getOnlinePlayers, no api-version
- Compile target Java 8 (bytecode compatible with Java 8 runtime)
- Remove api-version from plugin.yml (loads on Paper/Spigot 1.8.9+)
- getTPS() via reflection - graceful fallback on non-Paper
- getOnlinePlayers() via reflection - handles array (pre-1.12) and Collection (1.12+)
- Replace List.of() with Collections.emptyList() for Java 8 compat
- Remove JetBrains @NotNull annotations
- MIT license